Properly pin the incognito avatar.

BUG=700741

Review-Url: https://codereview.chromium.org/2743393002
Cr-Commit-Position: refs/heads/master@{#456419}

Former-commit-id: 9e4313b0e961f192ac53ede509ab9426f5065efc